load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_module", "ocaml_ns_archive", "ocaml_signature")

ocaml_signature(
    name = "mockup_args__sig",
    src = ":mockup_args.mli",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
    ],
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
        "@tezos//src/lib_shell_services:#Tezos_shell_services",
    ],
)

ocaml_module(
    name = "mockup_args",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
    ],
    sig = ":mockup_args__sig",
    struct = ":mockup_args.ml",
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
        "@tezos//src/lib_shell_services:#Tezos_shell_services",
    ],
)

ocaml_signature(
    name = "registration__sig",
    src = ":registration.mli",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
    ],
    deps = [
        ":registration_intf",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
        "@tezos//src/lib_shell_services:#Tezos_shell_services",
    ],
)

ocaml_module(
    name = "registration",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
    ],
    sig = ":registration__sig",
    struct = ":registration.ml",
    deps = [
        ":registration_intf",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
        "@tezos//src/lib_shell_services:#Tezos_shell_services",
    ],
)

ocaml_module(
    name = "registration_intf",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
    ],
    struct = ":registration_intf.ml",
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
        "@tezos//src/lib_shell_services:#Tezos_shell_services",
    ],
)

# okapi:public_name tezos-mockup-registration
ocaml_ns_archive(
    name = "#Tezos_mockup_registration",
    submodules = [
        ":mockup_args",
        ":registration",
        ":registration_intf",
    ],
    visibility = ["//visibility:public"],
)

ocaml_module(
    name = "RPC_client",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_mockup_registration",
    ],
    struct = ":RPC_client.ml",
    deps = [
        ":local_services",
        "@ocaml//lib/resto-cohttp-self-serving-client",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_base/unix:#Tezos_base_unix",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_mockup:#Tezos_mockup_registration",
        "@tezos//src/lib_mockup_proxy:#Tezos_mockup_proxy",
        "@tezos//src/lib_p2p:#Tezos_p2p",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
        "@tezos//src/lib_rpc:#Tezos_rpc",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http_client",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "files__sig",
    src = ":files.mli",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_mockup_registration",
    ],
    deps = [
        "@ocaml//lib/resto-cohttp-self-serving-client",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_base/unix:#Tezos_base_unix",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_mockup:#Tezos_mockup_registration",
        "@tezos//src/lib_mockup_proxy:#Tezos_mockup_proxy",
        "@tezos//src/lib_p2p:#Tezos_p2p",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
        "@tezos//src/lib_rpc:#Tezos_rpc",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http_client",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "files",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_mockup_registration",
    ],
    sig = ":files__sig",
    struct = ":files.ml",
    deps = [
        "@ocaml//lib/resto-cohttp-self-serving-client",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_base/unix:#Tezos_base_unix",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_mockup:#Tezos_mockup_registration",
        "@tezos//src/lib_mockup_proxy:#Tezos_mockup_proxy",
        "@tezos//src/lib_p2p:#Tezos_p2p",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
        "@tezos//src/lib_rpc:#Tezos_rpc",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http_client",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "local_services",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_mockup_registration",
    ],
    struct = ":local_services.ml",
    deps = [
        ":files",
        ":persistence",
        ":registration",
        ":registration_intf",
        "@ocaml//lib/resto-cohttp-self-serving-client",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_base/unix:#Tezos_base_unix",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_mockup:#Tezos_mockup_registration",
        "@tezos//src/lib_mockup_proxy:#Tezos_mockup_proxy",
        "@tezos//src/lib_p2p:#Tezos_p2p",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
        "@tezos//src/lib_rpc:#Tezos_rpc",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http_client",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "migration__sig",
    src = ":migration.mli",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_mockup_registration",
    ],
    deps = [
        ":persistence",
        "@ocaml//lib/resto-cohttp-self-serving-client",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_base/unix:#Tezos_base_unix",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_mockup:#Tezos_mockup_registration",
        "@tezos//src/lib_mockup_proxy:#Tezos_mockup_proxy",
        "@tezos//src/lib_p2p:#Tezos_p2p",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
        "@tezos//src/lib_rpc:#Tezos_rpc",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http_client",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "migration",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_mockup_registration",
    ],
    sig = ":migration__sig",
    struct = ":migration.ml",
    deps = [
        ":persistence",
        "@ocaml//lib/resto-cohttp-self-serving-client",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_base/unix:#Tezos_base_unix",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_mockup:#Tezos_mockup_registration",
        "@tezos//src/lib_mockup_proxy:#Tezos_mockup_proxy",
        "@tezos//src/lib_p2p:#Tezos_p2p",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
        "@tezos//src/lib_rpc:#Tezos_rpc",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http_client",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "persistence__sig",
    src = ":persistence.mli",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_mockup_registration",
    ],
    deps = [
        ":files",
        ":persistence_intf",
        ":registration",
        ":registration_intf",
        "@ocaml//lib/resto-cohttp-self-serving-client",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_base/unix:#Tezos_base_unix",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_mockup:#Tezos_mockup_registration",
        "@tezos//src/lib_mockup_proxy:#Tezos_mockup_proxy",
        "@tezos//src/lib_p2p:#Tezos_p2p",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
        "@tezos//src/lib_rpc:#Tezos_rpc",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http_client",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "persistence",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_mockup_registration",
    ],
    sig = ":persistence__sig",
    struct = ":persistence.ml",
    deps = [
        ":files",
        ":persistence_intf",
        ":registration",
        ":registration_intf",
        "@ocaml//lib/resto-cohttp-self-serving-client",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_base/unix:#Tezos_base_unix",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_mockup:#Tezos_mockup_registration",
        "@tezos//src/lib_mockup_proxy:#Tezos_mockup_proxy",
        "@tezos//src/lib_p2p:#Tezos_p2p",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
        "@tezos//src/lib_rpc:#Tezos_rpc",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http_client",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "persistence_intf",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_mockup_registration",
    ],
    struct = ":persistence_intf.ml",
    deps = [
        ":registration",
        "@ocaml//lib/resto-cohttp-self-serving-client",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_base/unix:#Tezos_base_unix",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_mockup:#Tezos_mockup_registration",
        "@tezos//src/lib_mockup_proxy:#Tezos_mockup_proxy",
        "@tezos//src/lib_p2p:#Tezos_p2p",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_protocol_environment:lib-tezos_protocol_environment",
        "@tezos//src/lib_rpc:#Tezos_rpc",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http",
        "@tezos//src/lib_rpc_http:#Tezos_rpc_http_client",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

# okapi:public_name tezos-mockup
ocaml_ns_archive(
    name = "#Tezos_mockup",
    submodules = [
        ":RPC_client",
        ":files",
        ":local_services",
        ":migration",
        ":persistence",
        ":persistence_intf",
    ],
    visibility = ["//visibility:public"],
)

ocaml_signature(
    name = "mockup_commands__sig",
    src = ":mockup_commands.mli",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_mockup",
        "-open",
        "Tezos_mockup_registration",
    ],
    deps = [
        ":migration",
        ":registration",
        ":registration_intf",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_client_commands:#Tezos_client_commands",
        "@tezos//src/lib_mockup:#Tezos_mockup",
        "@tezos//src/lib_mockup:#Tezos_mockup_registration",
    ],
)

ocaml_module(
    name = "mockup_commands",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_mockup",
        "-open",
        "Tezos_mockup_registration",
    ],
    sig = ":mockup_commands__sig",
    struct = ":mockup_commands.ml",
    deps = [
        ":migration",
        ":registration",
        ":registration_intf",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_client_commands:#Tezos_client_commands",
        "@tezos//src/lib_mockup:#Tezos_mockup",
        "@tezos//src/lib_mockup:#Tezos_mockup_registration",
    ],
)

ocaml_signature(
    name = "mockup_wallet__sig",
    src = ":mockup_wallet.mli",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_mockup",
        "-open",
        "Tezos_mockup_registration",
    ],
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_client_commands:#Tezos_client_commands",
        "@tezos//src/lib_mockup:#Tezos_mockup",
        "@tezos//src/lib_mockup:#Tezos_mockup_registration",
    ],
)

ocaml_module(
    name = "mockup_wallet",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_mockup",
        "-open",
        "Tezos_mockup_registration",
    ],
    sig = ":mockup_wallet__sig",
    struct = ":mockup_wallet.ml",
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_client_base:#Tezos_client_base",
        "@tezos//src/lib_client_commands:#Tezos_client_commands",
        "@tezos//src/lib_mockup:#Tezos_mockup",
        "@tezos//src/lib_mockup:#Tezos_mockup_registration",
    ],
)

# okapi:public_name tezos-mockup-commands
ocaml_ns_archive(
    name = "#Tezos_mockup_commands",
    submodules = [
        ":mockup_commands",
        ":mockup_wallet",
    ],
    visibility = ["//visibility:public"],
)
