load("@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_archive",
    "ocaml_module",
    "ocaml_ns_archive",
    "ocaml_signature",
)

###############################################
########### Archive/Library Targets ###########

######## tezos-mockup-proxy ########
TEZOS_MOCKUP_PROXY_OPTS = [
    "-open", "Tezos_base__TzPervasives",
]

TEZOS_MOCKUP_PROXY_DEPS = [
    "//src/lib_base:tezos-base",
    "//src/lib_client_base:tezos-client-base",
    "//src/lib_protocol_environment:tezos-protocol-environment",
    "//src/lib_rpc_http:tezos-rpc-http",
    "//src/lib_rpc_http:tezos-rpc-http-client",
    "//src/lib_shell_services:tezos-shell-services",
    "@resto-cohttp-self-serving-client//:resto-cohttp-self-serving-client",
]

ocaml_ns_archive(
    name       = "tezos-mockup-proxy",
    ns         = "Tezos_mockup_proxy",
    visibility = ["//visibility:public"],
    submodules = [
        ":RPC_client",
    ],
)

#############################
####  Singleton Targets  ####

ocaml_module(
    name     = "RPC_client",
    struct   = "RPC_client.ml",
    sig      = ":RPC_client_cmi",
    opts     = TEZOS_MOCKUP_PROXY_OPTS,
    deps     = TEZOS_MOCKUP_PROXY_DEPS + [
    ]
)

ocaml_signature(
    name     = "RPC_client_cmi",
    src      = "RPC_client.mli",
    opts     = TEZOS_MOCKUP_PROXY_OPTS,
    deps     = TEZOS_MOCKUP_PROXY_DEPS + [
    ]
)

